# NMTLunabotics2025

./: .gitignore  .gitmodules  Dockerfile  README.md  destroy_humans.sh  docker-compose.yml  docker_term.sh  entrypoint.sh  env_file.txt  led_control.service  start_docker.sh  teleop.sh
.devcontainer/: devcontainer.json
arduino/: led_control.py  test.py
arduino/I2C_test/: I2C_communication.ino  I2C_test.ino
arduino/actuator_calibrate/: actuator_calibrate.ino
arduino/fix_actuators/: arduino_lib.hpp  fix_actuators.ino  helpers.hpp
arduino/helpers/: arduino_lib.hpp  helpers.hpp
arduino/micro_ros_test/: micro_ros_test.ino
arduino/motor_control/: helpers.hpp  motor-actuator_controllor.ino  motor_control.ino
arduino/serial_test/: serial_test.ino
arduino/system_control/: arduino_lib.hpp  helpers.hpp  system_control.bkp  system_control.ino
arduino/system_control_2/: helpers.hpp  system_control_2.ino
arduino/system_control_old/: helpers.hpp  system_control_old.ino
arduino/test/: I2C_test.m  helpers.hpp  test.bkp  test.ino
flask_app/: app.bkp  app.py  start_cameras.sh
flask_app/templates/: index.html
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/log/: latest_build
ros2_ws/src/camera/: CMakeLists.txt  package.xml
ros2_ws/src/camera/launch/: usb_cam_launch.py  view_cam_launch.py
ros2_ws/src/can_raw/: CMakeLists.txt  package.xml
ros2_ws/src/can_raw/msg/: CanFrame.msg
ros2_ws/src/can_raw/src/: can_raw_node.cpp
ros2_ws/src/moon_messages/: CMakeLists.txt  package.xml
ros2_ws/src/moon_messages/msg/: Actuators.msg  Bytes.msg  Led.msg
ros2_ws/src/moon_serial/: package.xml  setup.cfg  setup.py
ros2_ws/src/moon_serial/config/: serial_params.yaml
ros2_ws/src/moon_serial/launch/: serial_launch.py
ros2_ws/src/moon_serial/moon_serial/: heartbeat_publisher.py  serial_bridge_node.py  serial_convert_node.py
ros2_ws/src/moon_services/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/moon_services/srv/: DigDump.srv
ros2_ws/src/motor_control/: package.xml  setup.py
ros2_ws/src/motor_control/config/: actuator_control_params.yaml  motor_control_params.yaml
ros2_ws/src/motor_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/motor_control/install/motor_control/lib/motor_control/: motor_control_node
ros2_ws/src/motor_control/install/motor_control/share/motor_control/: package.sh
ros2_ws/src/motor_control/install/motor_control/share/motor_control/launch/: motor_control_launch.py
ros2_ws/src/motor_control/launch/: motor_control_launch.py
ros2_ws/src/motor_control/log/: latest_build
ros2_ws/src/motor_control/motor_control/: actuator_control_node.py  motor_control_node.py
ros2_ws/src/motor_control/msg/: Actuators.msg
ros2_ws/src/motor_ctrl/: CMakeLists.txt  package.xml
ros2_ws/src/motor_ctrl/launch/: motor_launch.py
ros2_ws/src/motor_ctrl/src/: motor_ctrl_node.cpp
ros2_ws/src/navigation/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/config/: nav2_params.yaml  nav2_params_backup.txt  nav3_params.yaml
ros2_ws/src/navigation/launch/: nav_launch.py  nav_launch_backup.txt
ros2_ws/src/navigation/maps/: my_map.pgm  my_map.yaml
ros2_ws/src/robot_uprising/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_uprising/launch/: nukes_launch.py  overthrow_humans.py
ros2_ws/src/serial/: package.xml  setup.py
ros2_ws/src/serial/config/: serial_description.yaml  serial_params.yaml
ros2_ws/src/serial/msg/: Actuators.msg
ros2_ws/src/serial/serial/: convert_serial_node.py  serial_bridge.py  serial_node.py  serial_write_convert.py
ros2_ws/src/skid_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/skid_control/skid_control/: dig_dump_service.py
ros2_ws/src/slam_config/: CMakeLists.txt  package.xml
ros2_ws/src/slam_config/config/: points_to_laser.yaml  realsense_config.yaml  rtabmap_config.yaml  slam_params.yaml
ros2_ws/src/slam_config/launch/: realsense_launch.py  rtabmap_2_launch.py  rtabmap_launch.py  rtabmap_launch_old.py  rtabmap_realsense_launch.py  slam_launch.py
ros2_ws/src/slam_config/src/: scan_trim_node.py
ros2_ws/src/slam_config/urdf/: goliath.urdf  regulus.urdf
ros2_ws/src/teleop/launch/: teleop_launch.py
test/: serial_test.py
test/serial_rcv/: serial_rcv.ino
