<?xml version="1.0"?>
<package format="3">
  <name>can_raw</name>
  <version>0.0.0</version>
  <description>The can_raw package</description>

  <maintainer email="chasead7@gmail.com">chase</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>message_generation</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
