<?xml version="1.0"?>
<package format="3">
    <name>moon_messages</name>
    <version>0.0.1</version>
    <description>messages</description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>rosidl_default_runtime</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>