<?xml version="1.0"?>
<package format="3">
  <name>skid_control</name>
  <version>0.0.0</version>
  <description>Robot control package</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moon_messages</exec_depend>
  <exec_depend>moon_services</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
